preview_manifest/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-server-preview
  labels:
    app: express-server-preview
spec:
  ports:
  - port: 3000
    protocol: TCP
  clusterIP: None
  selector:
    app: express-server-preview
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-server-preview
  labels:
    app: express-server-preview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-server-preview
  template:
    metadata:
      labels:
        app: express-server-preview
    spec:
      containers:
      - name: express-server-preview
        image: $IMAGE
