preview_manifest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-server-preview.35.238.155.224.nip.io
spec:
  ingressClassName: nginx
  rules:
  - host: express-server-preview.35.238.155.224.nip.io
    http:
      paths:
      - backend:
          service:
            name: express-server-preview
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
